Added Direction class to hold Sides enum and to allow localization of side names